Isochrome behavors added
